# JuggerTube

./: .gitignore  Dockerfile  JuggerTube.sql  README.md  app.py  database-structure  docker-compose.yaml  openapi-specs.yaml
.github/: CODEOWNERS
backend/: .flake8  README.md  pyproject.toml  requirements.txt  run.py
backend/DataDomain/Database/: db.py
backend/DataDomain/Database/Enum/: ChannelLinkTypesEnum.py  GameSystemTypesEnum.py  VideoCategoriesEnum.py  VideoLinkTypesEnum.py  WeaponTypesEnum.py  __init__.py
backend/DataDomain/Database/Model/: BaseModel.py  Channels.py  Logs.py  Teams.py  Tournaments.py  Videos.py  __init__.py
backend/DataDomain/Database/Repository/: ChannelRepository.py  TeamRepository.py  TournamentRepository.py  VideoRepository.py  __init__.py
backend/DataDomain/Model/: Response.py
backend/ExternalApi/ChannelFrontend/: __init__.py
backend/ExternalApi/ChannelFrontend/Handler/: CreateChannelHandler.py  CreateMultipleChannelsHandler.py  GetChannelOverviewHandler.py  __init__.py
backend/ExternalApi/ChannelFrontend/InputFilter/: CreateChannelInputFilter.py  CreateMultipleChannelsInputFilter.py  __init__.py
backend/ExternalApi/ChannelFrontend/Validator/: CreateChannelValidator.py  __init__.py
backend/ExternalApi/ChannelFrontend/config/: __init__.py  routes.py
backend/ExternalApi/ChannelFrontend/specs/: create-channel.yaml  create-multiple-channels.yaml  get-channel-overview.yaml
backend/ExternalApi/System/Handler/: GetSwaggerFileHandler.py
backend/ExternalApi/TeamFrontend/: __init__.py
backend/ExternalApi/Tournament/: __init__.py
backend/ExternalApi/TournamentFrontend/: __init__.py
backend/ExternalApi/VideoFrontend/: __init__.py
backend/Infrastructure/Logger/: Logger.py
backend/config/: __init__.py  app.py  config.py  limiter.py
(+345 files in other folders)
